--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <!-- Link to manifest file -->
     <link rel="manifest" href="app.webmanifest" />
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Link to js file -->
     <script src="main.js" defer></script>
@@ -49,7 +53,14 @@
       <h1>Home screen</h1>
     </header>
 
-    <main>
+    <div class="login_container">
+        <label for="userLoginID">Login ID</label>
+        <input type="text" name="userLoginID" id="userLoginID">
+        <label for="userPassword">Password</label>
+        <input type="text" name="userPassword" id="userPassword">
+        <input type="submit">
+    </div>
+    <main >
       <h3>Request form</h3>
       <form id="request_form">
         <label for="reqTitle">Title</label>
@@ -65,5 +76,18 @@
     </main>
 
     <p class="hidden">Form submitted successfully!</p>
+
+    <!-- Scripts to link to firebase. These must be places above any firebase service -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.2.6/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/8.2.6/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
+
   </body>
 </html>
