updated notificationHome HTML&CSS to style alert and notification cards differently on home page. Created HTML/CSS/Javascript for notificationArchive and tenexbox pages.

--- a/notificationHome.html
+++ b/notificationHome.html
@@ -92,14 +92,14 @@
         <section class="requestUpdates">
             <h1>Request Updates</h1>
             <div class="newRequestCard">
-                <h2 class="bookingTitle">Meeting Room Booking</h2>
+                <h2 class="requestTitle">Meeting Room Booking</h2>
                 <p class="newRequestDate">FEB 12, 2021</p>
                 <p class="newRequestStatus">BOOKED</p>
                 <p class="bookingDate">FEB 21, 2021</p>
                 <p class="bookingTime">14:00 - 15:00</p>
             </div>
             <div class="newRequestCard">
-                <h2 class="bookingTitle">New Key Fob Request</h2>
+                <h2 class="requestTitle">New Key Fob Request</h2>
                 <p class="newRequestDate">FEB 18, 2021</p>
                 <p class="newRequestStatus">SENT</p>
                 <p class="newRequestExerpt">Hi Dwight,
@@ -111,7 +111,7 @@
                     Micheal</p>
             </div>
             <div class="newRequestCard">
-                <h2 class="bookingTitle">Updated Key Fob Price?</h2>
+                <h2 class="requestTitle">Updated Key Fob Price?</h2>
                 <p class="newRequestDate">FEB 19, 2021</p>
                 <p class="newRequestStatus">READ</p>
                 <p class="newRequestExerpt">Hi Dwight,
