--- a/onboarding.html
+++ b/onboarding.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="onboarding.css" />
-    <script src="onboarding.js" defer></script>
+    <title>Tenex - Onboarding</title>
+    <link rel="stylesheet" href="assets/css/onboarding.css" />
+
+    <!-- Link to manifest file -->
+    <link rel="manifest" href="app.webmanifest" />
+
+    <script src="assets/js/onboarding.js" defer></script>
+    
   </head>
   <body>
     <div class="slideshow-container" id="slideshow-container">
       <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <img src="images/unsplash-person-01.jpg" style="width: 100%" />
+        <img src="images/unsplash-person-01.jpg" />
         <h2>SEND REQUESTS</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
@@ -20,8 +25,7 @@
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <img src="images/unsplash-person-02.jpg" style="width: 100%" />
+        <img src="images/unsplash-person-02.jpg" />
         <h2>STAY UPDATED</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
@@ -30,8 +34,7 @@
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img src="images/unsplash-person-03.jpg" style="width: 100%" />
+        <img src="images/unsplash-person-03.jpg" />
         <h2>BUIDING INFO</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
@@ -51,17 +54,17 @@
         </button>
       </div>
     </div>
-    <br />
 
     <div class="tenexform" style="display: none" id="tenexform">
-      <h2 id ="welcome" onclick="mainpage()">Welcome!</h2>
-      <form>
+      <h2 id="welcome" onclick="mainpage()">Welcome!</h2>
+      <form id="loginForm">
         <label for="Username"
-          ><input type="email" placeholder="Enter Emal" name="email" required
+          ><input type="email" id="username" placeholder="Enter Email" name="email" required
         /></label>
         <label for="password"
           ><input
             type="password"
+            id="password"
             placeholder="Enter Password"
             name="psw"
             required
@@ -69,9 +72,48 @@
       </form>
 
       <p>Forgot Password?</p>
-      <div><button type="button" id="btn">SIGN IN</button></div>
+      <div><button type="submit" form="loginForm" id="signInBtn">SIGN IN</button></div>
       <p>New user?</p>
       <p>Contact your building manager</p>
     </div>
+
+    
+
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+  ></script>
+
+  <!-- Link to handlebars js cdn -->
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  
+  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+  <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+
+  <!-- Add Firebase products that you want to use -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+    <script>
+
+      // TODO: Replace the following with your app's Firebase project configuration
+      // For Firebase JavaScript SDK v7.20.0 and later, `measurementId` is an optional field
+      const firebaseConfig = {
+  apiKey: "AIzaSyDisbqXy64Iebq1pbH4K_TaOmh-WBnPGWs",
+  authDomain: "tenex-pwa-spring2021.firebaseapp.com",
+  projectId: "tenex-pwa-spring2021",
+  storageBucket: "tenex-pwa-spring2021.appspot.com",
+  messagingSenderId: "874020516286",
+  appId: "1:874020516286:web:7b3794806246d7e0cb09ef",
+  measurementId: "G-BB18XSR7K4"
+};
+  
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
