--- a/index.html
+++ b/index.html
@@ -2,92 +2,115 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tenex PWA - KIIITech</title>
-
-    <!-- Link to CSS stylesheet -->
-    <link rel="stylesheet" href="assets/css/normalize.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Tenex - Onboarding</title>
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Link to manifest file -->
     <link rel="manifest" href="app.webmanifest" />
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Link to js file -->
-    <script src="main.js" defer></script>
-
-    <!-- Script for pwa -->
-    <script>
-      // does the browser support service workers?
-      if ("serviceWorker" in navigator) {
-        // fires when the service worker is ready
-        navigator.serviceWorker.ready.then((reg) => {
-          // we have an active service worker working for us
-          console.log(`Service Worker ready (Scope: ${reg.scope})`);
-          // do something interesting, if you want...
-        });
-        // then register our service worker
-        navigator.serviceWorker
-          .register("./sw.js", { scope: "/" })
-          .then(function (reg) {
-            // display a success message
-            console.log(`Service Worker Registration (Scope: ${reg.scope})`);
-          })
-          .catch(function (error) {
-            // display an error message
-            console.log(`Service Worker Error (${error})`);
-          });
-      } else {
-        // happens when the app isn't served over a TLS connection (HTTPS)
-        console.warn("Service Worker not available");
-      }
-    </script>
+    <script src="assets/js/onboarding.js" defer></script>
+    
   </head>
   <body>
-    <header>
-      <h1>Home screen</h1>
-    </header>
+    <div class="slideshow-container" id="slideshow-container">
+      <div class="mySlides fade">
+        <img src="images/unsplash-person-01.jpg" />
+        <h2>SEND REQUESTS</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
+          deleniti suscipit!
+        </p>
+      </div>
 
-    <div class="login_container">
-        <label for="userLoginID">Login ID</label>
-        <input type="text" name="userLoginID" id="userLoginID">
-        <label for="userPassword">Password</label>
-        <input type="text" name="userPassword" id="userPassword">
-        <input type="submit">
+      <div class="mySlides fade">
+        <img src="images/unsplash-person-02.jpg" />
+        <h2>STAY UPDATED</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
+          deleniti suscipit!
+        </p>
+      </div>
+
+      <div class="mySlides fade">
+        <img src="images/unsplash-person-03.jpg" />
+        <h2>BUIDING INFO</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
+          deleniti suscipit!
+        </p>
+      </div>
+      <div style="text-align: center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      <div class="btn_to_login">
+        <button type="button" id="btn" value="Show Div" onclick="showDiv()">
+          SIGN IN
+        </button>
+      </div>
     </div>
-    <main >
-      <h3>Request form</h3>
-      <form id="request_form">
-        <label for="reqTitle">Title</label>
-        <input type="text" name="reqTitle" id="reqTitle" />
-        <label for="shortDescription">Short Description</label>
-        <textarea
-          rows="5"
-          name="shortDescription"
-          id="shortDescription"
-        ></textarea>
+
+    <div class="tenexform" style="display: none" id="tenexform">
+      <h2 id="welcome" onclick="mainpage()">Welcome!</h2>
+      <form id="loginForm">
+        <label for="Username"
+          ><input type="email" id="username" placeholder="Enter Email" name="email" required
+        /></label>
+        <label for="password"
+          ><input
+            type="password"
+            id="password"
+            placeholder="Enter Password"
+            name="psw"
+            required
+        /></label>
       </form>
-      <button type="submit" form="request_form">Submit Request</button>
-    </main>
 
-    <p class="hidden">Form submitted successfully!</p>
+      <p>Forgot Password?</p>
+      <div><button type="submit" form="loginForm" id="signInBtn">SIGN IN</button></div>
+      <p>New user?</p>
+      <p>Contact your building manager</p>
+    </div>
 
-    <!-- Scripts to link to firebase. These must be places above any firebase service -->
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/8.2.6/firebase-app.js"></script>
+    
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="/__/firebase/8.2.6/firebase-analytics.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+  ></script>
 
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
+  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 
+  <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
 
+  <!-- Add Firebase products that you want to use -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+    <script>
+
+      // TODO: Replace the following with your app's Firebase project configuration
+      // For Firebase JavaScript SDK v7.20.0 and later, `measurementId` is an optional field
+      const firebaseConfig = {
+  apiKey: "AIzaSyDisbqXy64Iebq1pbH4K_TaOmh-WBnPGWs",
+  authDomain: "tenex-pwa-spring2021.firebaseapp.com",
+  projectId: "tenex-pwa-spring2021",
+  storageBucket: "tenex-pwa-spring2021.appspot.com",
+  messagingSenderId: "874020516286",
+  appId: "1:874020516286:web:7b3794806246d7e0cb09ef",
+  measurementId: "G-BB18XSR7K4"
+};
+  
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
