--- a/calendar.html
+++ b/calendar.html
@@ -27,7 +27,7 @@
                   fill-rule="evenodd"
                   clip-rule="evenodd"
                   d="M8 20C9.1 20 10 19.1 10 18H6C6 19.1 6.89 20 8 20ZM14 14V9C14 5.93 12.36 3.36 9.5 2.68V2C9.5 1.17 8.83 0.5 8 0.5C7.17 0.5 6.5 1.17 6.5 2V2.68C3.63 3.36 2 5.92 2 9V14L0 16V17H16V16L14 14Z"
-                  fill="white"
+                  fill="#848484"
                 />
               </svg>
               Navigation
@@ -109,13 +109,14 @@
       </div>
     </div>
     <header>
-      <h1>Calendar</h1>
+      <h1 class="calendar_header">Calendar</h1>
+      <div class="date_select_wrapper">
+        <input type="date" name="calendar_date" id="calendarDate" />
+      </div>
     </header>
 
     <main class="calendarMain">
-      <div class="date_select_wrapper">
-        <input type="date" name="calender_date" id="calenderDate" />
-      </div>
+      
       <div class="selected_date_cards_wrapper">
           <div class="newRequestCard">
             <h2 class="requestTitle">Meeting Room Booking</h2>
@@ -180,8 +181,6 @@
         console.warn("Service Worker not available");
       }
     </script>
-    <!-- Link to handlebars js cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
@@ -193,8 +192,7 @@
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
+    
     <script>
       // TODO: Replace the following with your app's Firebase project configuration
       // For Firebase JavaScript SDK v7.20.0 and later, `measurementId` is an optional field
