--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="slideshow-container" id="slideshow-container">
       <div class="mySlides fade">
-        <img src="images/unsplash-person-01.jpg" />
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/500/500"></a>
         <h2>SEND REQUESTS</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
@@ -25,7 +25,7 @@
       </div>
 
       <div class="mySlides fade">
-        <img src="images/unsplash-person-02.jpg" />
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/600/600"></a>
         <h2>STAY UPDATED</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
@@ -34,7 +34,7 @@
       </div>
 
       <div class="mySlides fade">
-        <img src="images/unsplash-person-03.jpg" />
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/700/700"></a>
         <h2>BUIDING INFO</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti quo
@@ -72,7 +72,9 @@
       </form>
 
       <p>Forgot Password?</p>
-      <div><button type="submit" form="loginForm" id="signInBtn">SIGN IN</button></div>
+      <div class="btn_to_login">
+        <button type="submit" form="loginForm" id="signInBtn" >SIGN IN</button>
+      </div>
       <p>New user?</p>
       <p>Contact your building manager</p>
     </div>
