--- a/tenexbox.html
+++ b/tenexbox.html
@@ -23,48 +23,13 @@
             </form>
         </div>
         <div class="bottomHeader">
-            <button id="alert_btn" class="textFilter_btn">Bookings</button>
-            <button id="notif_btn" class="textFilter_btn">Requests</button>
+            <button id="bookings_btn" class="textFilter_btn">Bookings</button>
+            <button id="requests_btn" class="textFilter_btn">Requests</button>
         </div>
     </header>
     <main>
         <div id="requestCards">
         </div>
-        <!-- <div class="newRequestCard">
-            <h2 class="requestTitle">Meeting Room Booking</h2>
-            <p class="newRequestDate">FEB 15, 2021</p>
-            <p class="newRequestStatus">BOOKED</p>
-            <p class="bookingDate">FEB 21, 2021</p>
-            <p class="bookingTime">14:00 - 15:00</p>
-        </div>
-        <div class="newRequestCard">
-            <h2 class="requestTitle">Manager Meeting Booking</h2>
-            <p class="newRequestDate">FEB 12, 2021</p>
-            <p class="newRequestStatus">BOOKED</p>
-            <p class="bookingDate">FEB 13, 2021</p>
-            <p class="bookingTime">10:00 - 10:30</p>
-        </div>
-        <div class="newRequestCard">
-            <h2 class="requestTitle">Key Fob Price?</h2>
-            <p class="newRequestDate">FEB 10, 2021</p>
-            <p class="newRequestStatus">PENDING</p>
-            <p class="newRequestExerpt">Hi Dwight, I remember you mentioned that I can find the key fob price in the Tenex app. Where can I find that information in the app? Thanks, Michael
-            </p>
-        </div>
-        <div class="newRequestCard">
-            <h2 class="requestTitle">Noise Complaint</h2>
-            <p class="newRequestDate">FEB 05, 2021</p>
-            <p class="newRequestStatus">REJECTED</p>
-            <p class="newRequestExerpt">Hi Dwight, My neighbor has been playing the drums non-stop during the day. It's too loud. I can't focus on my work. Please ask him/her to stop. Thanks, Michael
-            </p>
-        </div>
-        <div class="newRequestCard">
-            <h2 class="requestTitle">Building Corridor Maintenance</h2>
-            <p class="newRequestDate">FEB 01, 2021</p>
-            <p class="newRequestStatus">MESSAGE</p>
-            <p class="newRequestExerpt">Hi Dwight, The building corridor, especially on my floor, is getting a little too dirty. Please ask the cleaning crew to clean the building corridor more often. Thanks, Michael
-            </p>
-        </div> -->
     </main>
 </body>
 </html>
