home page hifi developed. Booking card booked for date remaining

--- a/newRequestRequest.html
+++ b/newRequestRequest.html
@@ -79,9 +79,9 @@
       <form action="" id="requestForm">
         <select name="requestCategory" id="requestCategory" required>
           <option disabled selected hidden value="">Select Category</option>
-          <option value="service">Service</option>
-          <option value="complaint">Complaint</option>
-          <option value="general">General</option>
+          <option value="Service">Service</option>
+          <option value="Complaint">Complaint</option>
+          <option value="General">General</option>
         </select>
         <input type="text" name="otherrequestCategory" id="otherrequestCategory" placeholder="Type subcategory here..." required>
       
