updated homepage1 added booked for date

--- a/notificationHome1.html
+++ b/notificationHome1.html
@@ -443,7 +443,7 @@
       </header>
       <main id="alertDetailMain">
           <section class="detailCardSection">
-              <div id="alertDetailCard">
+              <div id="alertDetail">
           </section>
       </main>
     </div>
@@ -471,7 +471,7 @@
       </header>
       <main>
           <section class="detailCardSection">
-              <div id="notifDetailCard">
+              <div id="notifDetail">
           </section>
       </main>
     </div>
