--- a/requestDetail.html
+++ b/requestDetail.html
@@ -14,7 +14,7 @@
         <div class="topHeader">
             <button id="back_btn" class="back_btn"><svg width="22" height="24" viewBox="0 0 22 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 22L2 12L12 2" stroke="#AAAAAA" stroke-width="3" stroke-linecap="round"
+                    <path d="M12 22L2 12L12 2" stroke="#4f4f4f" stroke-width="3" stroke-linecap="round"
                         stroke-linejoin="round" />
                 </svg>
             </button>
